# anvil-embodied-ai

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.eval.yml  docker-compose.fake-hardware.yml  docker-compose.monitor-smoke-test.yml  docker-compose.yml  pyproject.toml
configs/cyclonedds/: gpu_pc.xml  single_pc.xml  two_pc_gpu.xml  two_pc_robot.xml
configs/embodiment_adapters/: hf_folding_to_anvil_openarm2.json
configs/experiments/: lego_in_cup_zero_one_shot.yaml
configs/lerobot_control/: inference_default.yaml  inference_ee.yaml  inference_eval.yaml  inference_lego_in_cup_act.yaml  inference_lego_in_cup_pi05_shadow.yaml  inference_lego_in_cup_vla_jepa.yaml  inference_shirt_fold_pi05_live.yaml  inference_shirt_fold_pi05_shadow.yaml  inference_single_arm.yaml  prediction_latencies.json  prediction_latency_baselines.json
configs/mcap_converter/: openarm_bimanual.yaml  openarm_bimanual_quest.yaml  openarm_bimanual_quest_16x9.yaml  openarm_ee_bimanual.yaml  openarm_ee_bimanual_16x9.yaml  openarm_ee_left.yaml  openarm_joint_bimanual.yaml  openarm_single_quest.yaml  openarm_single_quest_afo.yaml
configs/training/: lego_in_cup_smolvla.yaml  lego_in_cup_vla_jepa_world_model.yaml  shirt_fold_act_hf_task_space_outward_5stage_sarm_raw_v1.yaml  shirt_fold_pi05_base_phase_aligned.yaml  shirt_fold_pi05_hf_bounded_larchenko_5stage_sarm_raw_v3.yaml  shirt_fold_pi05_hf_bounded_larchenko_5stage_sarm_v2.yaml  shirt_fold_pi05_hf_bounded_larchenko_v1.yaml  shirt_fold_pi05_hf_phase_aligned.yaml  shirt_fold_pi05_hf_phase_aligned_priority_v1.yaml  shirt_fold_pi05_hf_phase_aligned_priority_v2.yaml  shirt_fold_pi05_hf_phase_aligned_quality_sarm_rabc_v2.yaml  shirt_fold_pi05_hf_phase_aligned_sarm_rabc_v1.yaml  shirt_fold_pi05_hf_task_space_outward_5stage_sarm_raw_v4.yaml  shirt_fold_sarm_5stage_dense_v1.yaml  shirt_fold_sarm_dense_v1.yaml
docker/inference/: Dockerfile  entrypoint.sh
docker/neuracore/: Dockerfile  entrypoint.sh
docs/: data-conversion.md  dataset-trimming.md  dataset-viz.md  embodiment-adapter.md  evaluation.md  inference-guide-revision-summary.md  inference-guide.md  inference.md  relative_ee_failure_analysis.md  shirt-fold-labeling-v2.md  shirt-fold-labeling-v3.md  shirt-fold-training.md  task-space-actions.md  training-tips.md  training.md  zero-one-shot.md
scripts/: inference_model.py  plot_monitor_csv.py  run_inference.sh  simulate_prediction_latencies.py  train_hf_folding_adapter_local_cpu.sh  training_metrics.sh  validate_zero_one_shot.py
scripts/training/: audit_openarm2_bounded_action_smoothing.py  audit_openarm2_quality_sarm_integration.py  audit_openarm2_sarm_progress.py  audit_openarm2_semantic_sarm_progress.py  audit_openarm2_task_space_actions.py  build_openarm2_shirt_fold_blind_review.py  build_openarm2_shirt_fold_priority_manifest.py  build_openarm2_shirt_fold_priority_manifest_v2.py  build_openarm2_shirt_fold_sarm_5stage_contract.py  build_openarm2_shirt_fold_semantic_manifest.py  calibrate_openarm2_semantic_sarm_progress.py  materialize_openarm2_robometer_dataset.py  materialize_openarm2_shirt_fold_sarm_5stage_dataset.py  (+3 more)
(+139 files in other folders)
