[project]
name = "anvil-embodied-ai"
version = "0.1.0"
description = "Anvil-Embodied-AI: Infrastructure for deploying AI models on Anvil robot platforms"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Anvil Robotics", email = "dev@anvil.bot" }
]
keywords = ["robotics", "imitation-learning", "lerobot", "ros2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "rerun-sdk>=0.26.2",
]

[project.urls]
Homepage = "https://anvil.bot/"
Repository = "https://github.com/anvil-robotics/anvil-embodied-ai"
Documentation = "https://github.com/anvil-robotics/anvil-embodied-ai#readme"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
]

[tool.uv.workspace]
members = [
    "packages/mcap_converter",
    "packages/anvil_trainer",
    "packages/anvil_eval",
    "packages/anvil_eval_ros",
    "packages/anvil_shared",
]

# PyTorch index — required for torch+cu* packages with bundled CUDA libs.
# Without this, uv resolves torch from PyPI (missing CUDA runtime deps).
# Adjust cu128 → cu126/cu124 to match your system's CUDA driver.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.isort]
known-first-party = ["mcap_converter", "anvil_trainer", "anvil_eval"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --import-mode=importlib -p no:launch_testing -p no:launch_testing_ros2 -p no:launch_testing_ros -p no:ament_lint -p no:ament_pep257 -p no:ament_flake8 -p no:ament_copyright -p no:ament_xmllint"
asyncio_mode = "auto"
